Check Java versions from selfrun scripts: Fix #1020