@@ -50,6 +50,38 @@ while true; do
     esac
 done
 
+java_fullversion=`java -fullversion 2>&1`
+
+case "$java_fullversion" in
+    java\ full\ version\ \"1.7*\")
+        echo "[ERROR] Embulk no longer supports Java 1.7." 1>&2
+        exit 1
+        ;;
+    java\ full\ version\ \"1.8*\")
+        ;;
+    java\ full\ version\ \"9*\")
+        echo "[WARN] Embulk does not guarantee running with Java 9." 1>&2
+        echo "[WARN] Executing Java with: \"--add-modules java.xml.bind --add-modules=java.se.ee\"" 1>&2
+        echo "" 1>&2
+        java_args="--add-modules java.xml.bind --add-modules=java.se.ee $java_args"
+        ;;
+    java\ full\ version\ \"10*\")
+        echo "[WARN] Embulk does not guarantee running with Java 10." 1>&2
+        echo "[WARN] Executing Java with: \"--add-modules java.xml.bind --add-modules=java.se.ee\"" 1>&2
+        echo "" 1>&2
+        java_args="--add-modules java.xml.bind --add-modules=java.se.ee $java_args"
+        ;;
+    java\ full\ version\ \"11*\")
+        echo "[WARN] Embulk does not guarantee running with Java 11." 1>&2
+        echo "[WARN] Executing Java with: \"--add-modules java.xml.bind --add-modules=java.se.ee\"" 1>&2
+        echo "" 1>&2
+        java_args="--add-modules java.xml.bind --add-modules=java.se.ee $java_args"
+        ;;
+    *)
+        echo "[WARN] Unrecognized Java version: $java_fullversion" 1>&2
+        echo "" 1>&2
+esac
+
 if test "$overwrite_optimize" = "true" -o "$default_optimize" -a "$overwrite_optimize" != "false"; then
     java_args="-XX:+AggressiveOpts -XX:+UseConcMarkSweepGC $java_args"
 else
